Implements a basic event functionality - Get the events from the remote API - Format each found event using HTML templates - Format dates using basic language functions - Implements a basic formatter to render templates - Implements a basic loader widget

--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,7 @@ body {
 /** Spinner */
 .spinner {
     animation: spinner 1s ease-out infinite;
-    border: 4px solid #a0aec0;
+    border: 4px solid #3182ce;
     border-radius: 10em;
     height: 40px;
     width: 40px;
